# new_admin_panel_sprint_2

./: .env.example  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
app/: .env.example  Dockerfile  Dockerfile.dev  Pipfile  docker-entrypoint.dev.sh  docker-entrypoint.sh  entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/config/: settings.py  urls.py
app/config/components/: databases.py  debug_toolbar.py  elasticsearch.py  installed_apps.py  middleware.py  restframework.py  static.py  time.py
app/movies/: admin.py  apps.py  constants.py  documents.py  models.py
app/movies/api/: signals.py  urls.py
app/movies/api/v1/: movies API.postman_collection.json  paginators.py  serializers.py  urls.py  views.py
app/movies/api/v2/: urls.py  views.py
app/movies/migrations/: 0001_initial.py
app/search_indexes/: documents.py  serializers.py  urls.py  views.py  viewsets.py
db/: .env.example  dump_30-01-2023_15_51_11.sql  init.sql
etl/: entrypoint.sh
etl/src/: load_from_sqlite.py  logger.py  validators.py
etl/tests/check_consistency/: tests.py
nginx/: nginx.conf
nginx/conf.d/: django.conf
sqlite_to_postgres/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
sqlite_to_postgres/db/: settings.py
sqlite_to_postgres/src/: transfer_to_psql.py
