# description
[tool.poetry]
name="app"
version="0.1.0"
description="Django admin panel for online cinema"
authors=["Sergey Bilibin <s.bilibin2017@yandex.ru>"]
readme="README.md"

# dependancies for production
[tool.poetry.dependencies]
django="3.2.4"
django-split-settings="1.2.0"
django-postgres-extra="2.0.6" 
djangorestframework="3.14.0"
django-filter="22.1"
gunicorn="20.1.0"
python="^3.10"
python-dotenv="0.21.1"
psycopg2-binary="2.9.5"
requests="2.28.2"

# dependancies for development
fix-smartquotes = "^0.2.0"
[tool.poetry.dev-dependencies]
flake8="3.9.0"
pytest="6.2.5"
pre-commit="2.15.0"
wemake-python-styleguide="0.15.3"
flake8-bandit="2.1.2"
bandit="1.7.2"
pylint="2.15.10"
autopep8="1.5.7"
ipython="8.9.0"
django-extensions="3.2.1"
django-debug-toolbar="3.8.1"
fix-smartquotes="0.2.0"




# default settings
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
